--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@
   border: 1px solid #000000;
 }
 
-.items-block{
+.items-block {
   height: 60;
   border: 1px solid #000000;
 }
@@ -22,13 +22,21 @@
   position : absolute;
 }
 
+.edit .item {
+  width: 400;
+  border: 1px solid #000000;
+  left: 40;
+  height: 430;
+  position: absolute;
+}
+
 .actions {
   height: 20;
-  width: 80;
+  width: 85;
   border: 1px solid #000000;
 }
 
-.actions div{
+.actions div {
   height: 18;
   width: 18;
   float: left;
@@ -44,13 +52,18 @@
 .panel {
   float: left;
   width: 20;
-  height:  430;
+  height: 430;
   border: 1px solid #000000;
 }
 
-.panel div{
+.panel div {
   width: 18;
   height: 20;
   background-color: #FF0000;
   border: 1px solid #000000;
+}
+
+.legend {
+  width: 390;
+  height: 210;
 }
