--- a/style/style.css
+++ b/style/style.css
@@ -1,69 +1,95 @@
+html body{
+  width: 95.5%;
+  height: 95.5%;
+  padding: 0px;
+}
+
 .compagnon {
-  width: 445;
-  height: 550;
+
   border: 1px solid #000000;
 }
 
 .header {
-  height: 25;
+  /*height: 25;*/
+  height: 4.854368932038835%;
   border: 1px solid #000000;
 }
 
 .items-block {
-  height: 60;
+  /*height: 60;*/
+  width: 100%;
+  height : 10.679611650485436%;
   border: 1px solid #000000;
 }
 
+.select{
+  height : 23.636363636363636%;
+  width: 10.952380952380952%;
+}
+
+.items{
+  width: 100%;
+  height: 76.36363636363636%;
+}
+
+
 .items .item {
-  height: 40;
   border: 1px solid #000000;
-  width: 40;
+  height : 6.796116504854369%;
+  width: 8.333333333333333%;
   background-color: #CCCC33;
   position : absolute;
 }
 
-.edit .item {
-  width: 400;
+.workspace {
   border: 1px solid #000000;
-  left: 40;
-  height: 430;
+  left: 6%;
   position: absolute;
+  width: 90%;
+  height: 73.7%;
+}
+
+.item.drawing,.item.video,.item.url,.item.image{
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .actions {
-  height: 20;
-  width: 85;
+  height: 3.1067961165048542%;
+  width: 15%;
   border: 1px solid #000000;
 }
 
-.actions div {
-  height: 18;
-  width: 18;
+.actions .new, .actions .undo,.actions .redo {
+  height: 100%;
+  width: 30.90909090909091%;
   float: left;
   background-color: #00FF00;
   border: 1px solid #000000;
 }
 
 .edit {
-  height: 430;
+  height: 77.08737864077669%;
+  width: 100%;
   border: 1px solid #000000;
 }
 
 .panel {
   float: left;
-  width: 20;
-  height: 430;
+  width: 5%;
+  height: 100%;
   border: 1px solid #000000;
 }
 
 .panel div {
-  width: 18;
-  height: 20;
+  width: 100%;
+  height: 5.037783375314862%;
   background-color: #FF0000;
   border: 1px solid #000000;
 }
 
 .legend {
-  width: 390;
-  height: 210;
+  width: 100%;
+  height: 48%;
 }
