--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,9 @@
-html body{
-  width: 95.5%;
-  height: 95.5%;
+body{
+  width: 100%;
+  height: 100%;
   padding: 0px;
   background-image: url('/pattern.png');
+  margin: 0px;
 }
 
 .compagnon {
@@ -11,11 +12,12 @@ html body{
 .header {
   height: 4.854368932038835%;
   background-image: url('camo.png');
+  margin-bottom: 35px;
 }
 
 
 .items-block {
-  /*height: 60;*/
+  margin: 0% 0% 1% 2%;
   width: 100%;
   height : 10.679611650485436%;
 }
@@ -93,6 +95,11 @@ html body{
   height : 6.796116504854369%;
   width: 8.333333333333333%;
   position : absolute;
+  /*position: relative;
+  width: 10%;
+  height: 100%;*/
+  float: left;
+  margin-right: 1%;
   background-color: #654FCA;
 }
 
@@ -109,11 +116,11 @@ html body{
   height: 100%;
 }
 
-.item.image,.item.drawing {
+.item.image,.item.drawing,.item.video {
   padding: 2.7253669% 2.2312373% 2.7253669% 2.4340771%;
   width: 80%;
   height: 75.780933063%;
-  margin : 5% 0% 10% 10%;
+  margin : 10% 0% 5% 10%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -153,7 +160,7 @@ html body{
   height: 48%;
 }
 
-.image .legend,.drawing .legend {
+.image .legend,.drawing .legend,.video .legend {
   width: 100%;
   height: 18%;
   float: left;
@@ -173,3 +180,19 @@ html body{
 }
 
 
+/*.input-field{
+  position: absolute;
+  left: 5%;
+  top: 0px;
+  display: none;
+  background-color: transparent;
+  padding: 0 5px;
+  font-family: proxima-light;
+  font-size: 13px;
+  color: white;
+  height: 10px;
+  line-height: 15px;
+  width: 250px;
+  border-left: 2px solid white;
+  margin: 8px 0 0 5px;
+}*/
