--- a/style/style.css
+++ b/style/style.css
@@ -1,22 +1,76 @@
 body {
-  width: 100%;
-  height: 100%;
+  /*width: 100%;
+  height: 100%;*/
   background-image: url("/pattern.png");
-  margin: 0%; }
+  margin: 0%;
+  }
+  
+  .compagnon {
+    width : 100%;
+    height : 100%;
+  }
   body .header {
     height: 5%;
-    background-image: url("camo.png"); }
+    position : relative;
+    background-image: url("camo.png");
+    }
+  body .header .logo {
+      background-image : url("logo.png");
+      background-size : contain;
+      background-repeat : no-repeat;
+      width : 10%;
+      height : 95%;
+      position : absolute;
+      left : 1.4%;
+      top : 10%;
+   }
+   body .header .sync {
+     width : 9%;
+     height : 120%;
+     background-image : url("sync.png");
+     background-size : contain;
+     background-repeat : no-repeat;
+     right : 2%;
+     top : 40%;
+     position : absolute;
+   }
+   body .header .curvedBorder {
+     width : 8%;
+     height : 130%;
+     border-bottom : 2px solid #FFFFFF;
+     right : 3.5%;
+     position : absolute;
+     top : 37%;
+     border-radius : 50%;
+     /*border-bottom-left-radius : 100%;
+     border-bottom-right-radius : 100%;*/ 
+   }
+   body .header .leftBorder {
+     border-bottom : 1px solid #FFFFFF;
+     width : 88.7%;
+     height : 100%;
+     position : absolute;
+   }
+   body .header .rightBorder {
+     border-bottom : 1px solid #FFFFFF;
+     width : 3.5%;
+     height : 100%;
+     position : absolute;
+     right : 0%;
+   }
   body .items-block {
     height: 7%;
-    width: 100%;
+    width: 98.5%;
     left: 1.5%;
     position: absolute;
     top: 14%; }
     body .items-block .select {
       height: 32%;
-      background-image: url("select.png");
+      font-family : "clr";
+      color : #FFFFFF;
+      /*background-image: url("select.png");
       background-repeat: no-repeat;
-      background-size: contain; }
+      background-size: contain;*/ }
     body .items-block .items {
       position: relative;
       height: 68%; }
@@ -25,7 +79,7 @@ body {
         height: 100%;
         top: 0%;
         float: left;
-        margin-right: 1%;
+        margin-right: 1.5%;
         background-color: #FFFFFF;
         background-repeat: no-repeat; }
       body .items-block .items .mini-item.drawing {
@@ -67,29 +121,36 @@ body {
     body .edit .panel {
       float: left;
       width: 5%;
-      height: 100%; }
+      height: 100%;
+      border-right : 1px solid #444444;
+      margin-right : 10px}
       body .edit .panel div {
         width: 100%;
         height: 5.037783375314862%;
-        top: 28%;
         position: relative; }
       body .edit .panel .drawing {
+        top: 28%;
         background-image: url("drawing.png");
         background-repeat: no-repeat;
         background-size: contain; }
       body .edit .panel .upload {
         background-image: url("upload.png");
+        top: 28%;
         background-repeat: no-repeat;
         background-size: contain; }
       body .edit .panel .link {
         background-image: url("link.png");
+        top: 28%;
         background-repeat: no-repeat;
         background-size: contain; }
       body .edit .panel .picture {
         background-image: url("camera.png");
+        top: 28%;
         background-repeat: no-repeat;
         background-size: contain; }
       body .edit .panel .delete {
+        bottom : 0%;
+        position : absolute;
         background-image: url("trash.png");
         background-repeat: no-repeat;
         background-size: contain; }
@@ -102,7 +163,8 @@ body {
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
-      display: inline-flex; }
+      border-left : 1px solid #444444;
+       }
       body .edit .workspace .item.image, body .edit .workspace .item.drawing, body .edit .workspace .item.video {
         padding: 2.7% 2.2% 2.7% 2.4%;
         -webkit-box-sizing: border-box;
@@ -114,7 +176,10 @@ body {
         float: left;
         position: absolute;
         top: 50%;
-        transform: translateY(-50%); }
+        transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        }
         body .edit .workspace .item.image .case, body .edit .workspace .item.image .drawing-canvas, body .edit .workspace .item.image .iframe, body .edit .workspace .item.drawing .case, body .edit .workspace .item.drawing .drawing-canvas, body .edit .workspace .item.drawing .iframe, body .edit .workspace .item.video .case, body .edit .workspace .item.video .drawing-canvas, body .edit .workspace .item.video .iframe {
           border-bottom-width: 5px;
           border-bottom-style: solid;
@@ -123,7 +188,24 @@ body {
           position: relative; }
         body .edit .workspace .item.image .legend, body .edit .workspace .item.drawing .legend, body .edit .workspace .item.video .legend {
           outline: none;
+          font-family : "clr";
           margin-top: 2%; }
+          
+@font-face{
+	font-family: "clr";
+	src : url("/canallightromain-webfont.woff");
+}
+
+@font-face{
+	font-family: "cbi";
+	src : url("/canalbolditalic-webfont.woff");
+}
+
+@font-face{
+	font-family: "cbr";
+	src : url("/canalboldromain-webfont.woff");
+}
+
 
 /*.undo-redo-clear{
   height : 5%;
@@ -156,11 +238,3 @@ body {
   position : relative;
   background-color : red;
 }
-
-.sync{
-  background-color : purple;
-  width : 3%;
-  height : 3%;
-  position : absolute;
-  left : 97%;
-}*/
